// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`#1649 1`] = `
[
  {
    "children": [
      {
        "children": [],
        "file": "/path/to/1649/pages/account/addresses.vue",
        "name": "account-addresses",
        "path": "addresses",
      },
      {
        "children": [],
        "file": "/path/to/1649/pages/account/index.vue",
        "name": "account",
        "path": "",
      },
      {
        "children": [],
        "file": "/path/to/1649/pages/account/profile.vue",
        "name": "account-profile",
        "path": "profile",
      },
    ],
    "file": "/path/to/1649/pages/account.vue",
    "path": "/account",
  },
  {
    "children": [
      {
        "children": [],
        "file": "/path/to/1649/pages/account/addresses.vue",
        "name": "account-addresses___locale",
        "path": "addresses",
      },
      {
        "children": [],
        "file": "/path/to/1649/pages/account/index.vue",
        "name": "account___locale",
        "path": "",
      },
      {
        "children": [],
        "file": "/path/to/1649/pages/account/profile.vue",
        "name": "account-profile___locale",
        "path": "profile",
      },
    ],
    "file": "/path/to/1649/pages/account.vue",
    "name": "undefined___locale",
    "path": "/:locale(ja|fr)/account",
  },
  {
    "children": [],
    "file": "/path/to/1649/pages/index.vue",
    "name": "index",
    "path": "/",
  },
  {
    "children": [],
    "file": "/path/to/1649/pages/index.vue",
    "name": "index___locale",
    "path": "/:locale(ja|fr)",
  },
]
`;

exports[`#1649 2`] = `
[
  {
    "children": [
      {
        "children": [],
        "file": "/path/to/1649/pages/account/addresses.vue",
        "name": "account-addresses",
        "path": "addresses",
      },
      {
        "children": [],
        "file": "/path/to/1649/pages/account/index.vue",
        "name": "account",
        "path": "",
      },
      {
        "children": [],
        "file": "/path/to/1649/pages/account/profile.vue",
        "name": "account-profile",
        "path": "profile",
      },
    ],
    "file": "/path/to/1649/pages/account.vue",
    "path": "/account",
  },
  {
    "children": [
      {
        "children": [],
        "file": "/path/to/1649/pages/account/addresses.vue",
        "name": "account-addresses___locale",
        "path": "addresses",
      },
      {
        "children": [],
        "file": "/path/to/1649/pages/account/index.vue",
        "name": "account___locale",
        "path": "",
      },
      {
        "children": [],
        "file": "/path/to/1649/pages/account/profile.vue",
        "name": "account-profile___locale",
        "path": "profile",
      },
      {
        "children": [
          {
            "children": [],
            "file": "/path/to/1649/pages/account/addresses.vue",
            "name": "account-addresses___locale___fr",
            "path": "addresses",
          },
          {
            "children": [],
            "file": "/path/to/1649/pages/account/index.vue",
            "name": "account___locale___fr",
            "path": "",
          },
          {
            "children": [],
            "file": "/path/to/1649/pages/account/profile.vue",
            "name": "account-profile___locale___fr",
            "path": "profile",
          },
        ],
        "file": "/path/to/1649/pages/account.vue",
        "locale": "fr",
        "name": "undefined___locale___fr",
        "parent": undefined,
        "path": "/:locale(fr)/compte",
      },
    ],
    "file": "/path/to/1649/pages/account.vue",
    "name": "undefined___locale",
    "path": "/:locale(ja|fr)/account",
  },
  {
    "children": [],
    "file": "/path/to/1649/pages/index.vue",
    "name": "index",
    "path": "/",
  },
  {
    "children": [],
    "file": "/path/to/1649/pages/index.vue",
    "name": "index___locale",
    "path": "/:locale(ja|fr)",
  },
]
`;

exports[`Module configuration > dynamic parameters 1`] = `
[
  {
    "children": [],
    "file": "/path/to/nuxt-app/pages/blog/[date]/[slug].vue",
    "name": "blog-date-slug",
    "path": "/blog/:date/:slug",
  },
  {
    "children": [],
    "file": "/path/to/nuxt-app/pages/blog/[date]/[slug].vue",
    "name": "blog-date-slug___locale",
    "path": "/:locale(ja|fr)/blog/:date/:slug",
  },
]
`;

exports[`Module configuration > dynamic parameters 2`] = `
[
  {
    "children": [],
    "file": "/path/to/nuxt-app/pages/blog/[date]/[slug].vue",
    "name": "blog-date-slug",
    "path": "/blog/:date/:slug",
  },
  {
    "children": [
      {
        "children": [],
        "file": "/path/to/nuxt-app/pages/blog/[date]/[slug].vue",
        "locale": "ja",
        "name": "blog-date-slug___locale___ja",
        "parent": undefined,
        "path": "/:locale(ja)/blog/tech/:date()/:slug()",
      },
    ],
    "file": "/path/to/nuxt-app/pages/blog/[date]/[slug].vue",
    "name": "blog-date-slug___locale",
    "path": "/:locale(ja|fr)/blog/:date/:slug",
  },
]
`;

exports[`Module configuration > simple 1`] = `
[
  {
    "children": [],
    "file": "/path/to/nuxt-app/pages/about.vue",
    "path": "/about",
  },
  {
    "children": [],
    "file": "/path/to/nuxt-app/pages/about.vue",
    "name": "undefined___locale",
    "path": "/:locale(ja|fr)/about",
  },
]
`;

exports[`Module configuration > simple 2`] = `
[
  {
    "children": [],
    "file": "/path/to/nuxt-app/pages/about.vue",
    "path": "/about",
  },
  {
    "children": [
      {
        "children": [],
        "file": "/path/to/nuxt-app/pages/about.vue",
        "locale": "en",
        "name": "undefined___locale___en",
        "parent": undefined,
        "path": "/:locale(en)/about-us",
      },
      {
        "children": [],
        "file": "/path/to/nuxt-app/pages/about.vue",
        "locale": "ja",
        "name": "undefined___locale___ja",
        "parent": undefined,
        "path": "/:locale(ja)/about-us",
      },
      {
        "children": [],
        "file": "/path/to/nuxt-app/pages/about.vue",
        "locale": "fr",
        "name": "undefined___locale___fr",
        "parent": undefined,
        "path": "/:locale(fr)/a-propos",
      },
    ],
    "file": "/path/to/nuxt-app/pages/about.vue",
    "name": "undefined___locale",
    "path": "/:locale(ja|fr)/about",
  },
]
`;

exports[`Module configuration > the part of URL 1`] = `
[
  {
    "children": [],
    "file": "/path/to/nuxt-app/pages/about.vue",
    "path": "/about",
  },
  {
    "children": [],
    "file": "/path/to/nuxt-app/pages/about.vue",
    "name": "undefined___locale",
    "path": "/:locale(ja|fr)/about",
  },
  {
    "children": [],
    "file": "/path/to/nuxt-app/pages/services/coaching.vue",
    "name": "services-coaching",
    "path": "/services/coaching",
  },
  {
    "children": [],
    "file": "/path/to/nuxt-app/pages/services/coaching.vue",
    "name": "services-coaching___locale",
    "path": "/:locale(ja|fr)/services/coaching",
  },
  {
    "children": [],
    "file": "/path/to/nuxt-app/pages/services/development/app.vue",
    "name": "services-development-app",
    "path": "/services/development/app",
  },
  {
    "children": [],
    "file": "/path/to/nuxt-app/pages/services/development/app.vue",
    "name": "services-development-app___locale",
    "path": "/:locale(ja|fr)/services/development/app",
  },
  {
    "children": [],
    "file": "/path/to/nuxt-app/pages/services/development/index.vue",
    "name": "services-development",
    "path": "/services/development",
  },
  {
    "children": [],
    "file": "/path/to/nuxt-app/pages/services/development/index.vue",
    "name": "services-development___locale",
    "path": "/:locale(ja|fr)/services/development",
  },
  {
    "children": [],
    "file": "/path/to/nuxt-app/pages/services/development/website.vue",
    "name": "services-development-website",
    "path": "/services/development/website",
  },
  {
    "children": [],
    "file": "/path/to/nuxt-app/pages/services/development/website.vue",
    "name": "services-development-website___locale",
    "path": "/:locale(ja|fr)/services/development/website",
  },
  {
    "children": [],
    "file": "/path/to/nuxt-app/pages/services/index.vue",
    "name": "services",
    "path": "/services",
  },
  {
    "children": [],
    "file": "/path/to/nuxt-app/pages/services/index.vue",
    "name": "services___locale",
    "path": "/:locale(ja|fr)/services",
  },
]
`;

exports[`Module configuration > the part of URL 2`] = `
[
  {
    "children": [],
    "file": "/path/to/nuxt-app/pages/about.vue",
    "path": "/about",
  },
  {
    "children": [
      {
        "children": [],
        "file": "/path/to/nuxt-app/pages/about.vue",
        "locale": "fr",
        "name": "undefined___locale___fr",
        "parent": undefined,
        "path": "/:locale(fr)/a-propos",
      },
    ],
    "file": "/path/to/nuxt-app/pages/about.vue",
    "name": "undefined___locale",
    "path": "/:locale(ja|fr)/about",
  },
  {
    "children": [],
    "file": "/path/to/nuxt-app/pages/services/coaching.vue",
    "name": "services-coaching",
    "path": "/services/coaching",
  },
  {
    "children": [
      {
        "children": [],
        "file": "/path/to/nuxt-app/pages/services/coaching.vue",
        "locale": "fr",
        "name": "services-coaching___locale___fr",
        "parent": undefined,
        "path": "/:locale(fr)/offres/formation",
      },
    ],
    "file": "/path/to/nuxt-app/pages/services/coaching.vue",
    "name": "services-coaching___locale",
    "path": "/:locale(ja|fr)/services/coaching",
  },
  {
    "children": [],
    "file": "/path/to/nuxt-app/pages/services/development/app.vue",
    "name": "services-development-app",
    "path": "/services/development/app",
  },
  {
    "children": [
      {
        "children": [],
        "file": "/path/to/nuxt-app/pages/services/development/app.vue",
        "locale": "fr",
        "name": "services-development-app___locale___fr",
        "parent": undefined,
        "path": "/:locale(fr)/offres/developement/app",
      },
    ],
    "file": "/path/to/nuxt-app/pages/services/development/app.vue",
    "name": "services-development-app___locale",
    "path": "/:locale(ja|fr)/services/development/app",
  },
  {
    "children": [],
    "file": "/path/to/nuxt-app/pages/services/development/index.vue",
    "name": "services-development",
    "path": "/services/development",
  },
  {
    "children": [
      {
        "children": [],
        "file": "/path/to/nuxt-app/pages/services/development/index.vue",
        "locale": "fr",
        "name": "services-development___locale___fr",
        "parent": undefined,
        "path": "/:locale(fr)/offres/developement",
      },
    ],
    "file": "/path/to/nuxt-app/pages/services/development/index.vue",
    "name": "services-development___locale",
    "path": "/:locale(ja|fr)/services/development",
  },
  {
    "children": [],
    "file": "/path/to/nuxt-app/pages/services/development/website.vue",
    "name": "services-development-website",
    "path": "/services/development/website",
  },
  {
    "children": [
      {
        "children": [],
        "file": "/path/to/nuxt-app/pages/services/development/website.vue",
        "locale": "fr",
        "name": "services-development-website___locale___fr",
        "parent": undefined,
        "path": "/:locale(fr)/offres/developement/site-web",
      },
    ],
    "file": "/path/to/nuxt-app/pages/services/development/website.vue",
    "name": "services-development-website___locale",
    "path": "/:locale(ja|fr)/services/development/website",
  },
  {
    "children": [],
    "file": "/path/to/nuxt-app/pages/services/index.vue",
    "name": "services",
    "path": "/services",
  },
  {
    "children": [
      {
        "children": [],
        "file": "/path/to/nuxt-app/pages/services/index.vue",
        "locale": "fr",
        "name": "services___locale___fr",
        "parent": undefined,
        "path": "/:locale(fr)/offres",
      },
    ],
    "file": "/path/to/nuxt-app/pages/services/index.vue",
    "name": "services___locale",
    "path": "/:locale(ja|fr)/services",
  },
]
`;

exports[`Page components > JavaScript 1`] = `
[
  {
    "children": [],
    "path": "/about",
  },
  {
    "children": [],
    "name": "undefined___locale",
    "path": "/:locale(ja|fr)/about",
  },
]
`;

exports[`Page components > JavaScript 2`] = `
[
  {
    "children": [],
    "path": "/about",
  },
  {
    "children": [
      {
        "children": [],
        "locale": "en",
        "name": "undefined___locale___en",
        "parent": undefined,
        "path": "/:locale(en)/about-us",
      },
      {
        "children": [],
        "locale": "ja",
        "name": "undefined___locale___ja",
        "parent": undefined,
        "path": "/:locale(ja)/about-ja",
      },
      {
        "children": [],
        "locale": "fr",
        "name": "undefined___locale___fr",
        "parent": undefined,
        "path": "/:locale(fr)/a-propos",
      },
    ],
    "name": "undefined___locale",
    "path": "/:locale(ja|fr)/about",
  },
]
`;

exports[`Page components > dynamic route 1`] = `
[
  {
    "children": [],
    "name": "articles-name",
    "path": "/articles/:name",
  },
  {
    "children": [],
    "name": "articles-name___locale",
    "path": "/:locale(ja|fr)/articles/:name",
  },
]
`;

exports[`Page components > dynamic route 2`] = `
[
  {
    "children": [],
    "name": "articles-name",
    "path": "/articles/:name",
  },
  {
    "children": [
      {
        "children": [],
        "locale": "en",
        "name": "articles-name___locale___en",
        "parent": undefined,
        "path": "/:locale(en)/articles/:name()",
      },
      {
        "children": [],
        "locale": "ja",
        "name": "articles-name___locale___ja",
        "parent": undefined,
        "path": "/:locale(ja)/%E8%A8%98%E4%BA%8B/:name()",
      },
      {
        "children": [],
        "locale": "fr",
        "name": "articles-name___locale___fr",
        "parent": undefined,
        "path": "/:locale(fr)/articles/:name()",
      },
    ],
    "name": "articles-name___locale",
    "path": "/:locale(ja|fr)/articles/:name",
  },
]
`;

exports[`Page components > simple 1`] = `
[
  {
    "children": [],
    "path": "/about",
  },
  {
    "children": [],
    "name": "undefined___locale",
    "path": "/:locale(ja|fr)/about",
  },
]
`;

exports[`Page components > simple 2`] = `
[
  {
    "children": [],
    "path": "/about",
  },
  {
    "children": [
      {
        "children": [],
        "locale": "en",
        "name": "undefined___locale___en",
        "parent": undefined,
        "path": "/:locale(en)/about-us",
      },
      {
        "children": [],
        "locale": "ja",
        "name": "undefined___locale___ja",
        "parent": undefined,
        "path": "/:locale(ja)/about-ja",
      },
      {
        "children": [],
        "locale": "fr",
        "name": "undefined___locale___fr",
        "parent": undefined,
        "path": "/:locale(fr)/a-propos",
      },
    ],
    "name": "undefined___locale",
    "path": "/:locale(ja|fr)/about",
  },
]
`;

exports[`Page components > with definePageMeta 1`] = `
[
  {
    "children": [],
    "path": "/about",
  },
  {
    "children": [],
    "name": "undefined___locale",
    "path": "/:locale(ja|fr)/about",
  },
]
`;

exports[`Page components > with definePageMeta 2`] = `
[
  {
    "children": [],
    "path": "/about",
  },
  {
    "children": [
      {
        "children": [],
        "locale": "en",
        "name": "undefined___locale___en",
        "parent": undefined,
        "path": "/:locale(en)/about-us",
      },
      {
        "children": [],
        "locale": "ja",
        "name": "undefined___locale___ja",
        "parent": undefined,
        "path": "/:locale(ja)/about-ja",
      },
      {
        "children": [],
        "locale": "fr",
        "name": "undefined___locale___fr",
        "parent": undefined,
        "path": "/:locale(fr)/a-propos",
      },
    ],
    "name": "undefined___locale",
    "path": "/:locale(ja|fr)/about",
  },
]
`;
